fix: layout shift for cover images

--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -2753,6 +2753,7 @@ $small-caps-ratio: 1.2;
 
 #detail-art img {
     display: block;
+    height: auto;
     max-width: 100%;
     margin: 0 auto;
 }
